[tool.poetry]
name = "RecSys"
version = "0.1.0"
description = "Deep Learning and Reinforcement Learning implementations on Trivago Dataset."
authors = ["emek"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
